--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -13,6 +13,8 @@
       <meta http-equiv="refresh" content="3; url={{ redirect }}">
     {% endif %}
     {% include head.liquid %}
+    <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
+
   </head>
 
   <!-- Body -->
