fixed js folders;

--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -70,7 +70,7 @@
 <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
 
 <!-- Dark Mode -->
-<script src="{{ '/assets/js/theme.js' | relative_url | bust_file_cache }}"></script>
+<script src="https://pzxyxz.github.io/assets/js/theme.js"></script>
 {% if site.enable_darkmode %}
   <link
     defer
