--- a/_includes/distill_scripts.liquid
+++ b/_includes/distill_scripts.liquid
@@ -132,7 +132,7 @@
     integrity="{{ site.third_party_libraries.medium_zoom.integrity.js }}"
     crossorigin="anonymous"
   ></script>
-  <script defer src="{{ '/assets/js/zoom.js' | relative_url | bust_file_cache }}"></script>
+   <script src="https://pzxyxz.github.io/assets/js/zoom.js"></script>
 {% endif %}
 
 {% if page.toc and page.toc.sidebar %}
@@ -171,7 +171,7 @@
     integrity="{{ site.third_party_libraries.mathjax.integrity.js }}"
     crossorigin="anonymous"
   ></script>
-  <script src="{{ '/assets/js/mathjax-setup.js' | relative_url | bust_file_cache }}"></script>
+  <script src="https://pzxyxz.github.io/assets/js/mathjax-setup.js"></script>
   <script
     defer
     src="{{ site.third_party_libraries.polyfill.url.js }}"
@@ -184,7 +184,7 @@
   <!-- Analytics -->
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
-  <script defer src="{{ '/assets/js/google-analytics-setup.js' | relative_url | bust_file_cache }}"></script>
+     <script src="https://pzxyxz.github.io/assets/js/google-analytics.js"></script>
 {% endif %}
 
 {% if site.enable_cronitor_analytics %}
@@ -207,7 +207,7 @@
 
 {% if site.enable_progressbar %}
   <!-- Scrolling Progress Bar -->
-  <script defer src="{{ '/assets/js/progress-bar.js' | relative_url | bust_file_cache }}" type="text/javascript"></script>
+    <script src="https://pzxyxz.github.io/assets/js/progress-bar.js"></script>
 {% endif %}
 
 {% if page.images %}
@@ -274,9 +274,9 @@
   <!-- Search -->
   <script type="module" src="{{ '/assets/js/search/ninja-keys.min.js' | relative_url | bust_file_cache }}"></script>
   <ninja-keys hideBreadcrumbs noAutoLoadMdIcons placeholder="Type to start searching"></ninja-keys>
-  <script src="{{ '/assets/js/search-setup.js' | relative_url | bust_file_cache }}"></script>
-  <script src="{{ '/assets/js/search-data.js' | relative_url }}"></script>
-  <script src="{{ '/assets/js/shortcut-key.js' | relative_url | bust_file_cache }}"></script>
+  <script src="https://pzxyxz.github.io/assets/js/search-setup.js"></script>
+  <script src="https://pzxyxz.github.io/assets/js/search-data.js"></script>
+  <script src="https://pzxyxz.github.io/assets/js/shortcut-key.js"></script>
 {% endif %}
 
 {% if site.newsletter.enabled %}
