--- a/_includes/scripts.liquid
+++ b/_includes/scripts.liquid
@@ -27,7 +27,7 @@
     integrity="{{ site.third_party_libraries.imagesloaded.integrity.js }}"
     crossorigin="anonymous"
   ></script>
-  <script defer src="{{ '/assets/js/masonry.js' | relative_url | bust_file_cache }}" type="text/javascript"></script>
+    <script src="https://pzxyxz.github.io/assets/js/masonry.js"></script>
 {% endif %}
 
 {% if page.mermaid and page.mermaid.enabled %}
@@ -149,7 +149,7 @@
     integrity="{{ site.third_party_libraries.medium_zoom.integrity.js }}"
     crossorigin="anonymous"
   ></script>
-  <script defer src="{{ '/assets/js/zoom.js' | relative_url | bust_file_cache }}"></script>
+    <script src="https://pzxyxz.github.io/assets/js/zoom.js"></script>
 {% endif %}
 
 {% if page.toc and page.toc.sidebar %}
@@ -169,12 +169,12 @@
 {% endif %}
 
 <!-- Load Common JS -->
-<script src="{{ '/assets/js/no_defer.js' | relative_url | bust_file_cache }}"></script>
-<script defer src="{{ '/assets/js/common.js' | relative_url | bust_file_cache }}"></script>
-<script defer src="{{ '/assets/js/copy_code.js' | relative_url | bust_file_cache }}" type="text/javascript"></script>
+<script src="https://pzxyxz.github.io/assets/js/no_defer.js"></script>
+<script src="https://pzxyxz.github.io/assets/js/common.js"></script>
+<script src="https://pzxyxz.github.io/assets/js/copy_code.js"></script>
 
 <!-- Jupyter Open External Links New Tab -->
-<script defer src="{{ '/assets/js/jupyter_new_tab.js' | relative_url | bust_file_cache }}"></script>
+<script src="https://pzxyxz.github.io/assets/js/jupyter_new_tab.js"></script>
 
 <!-- Badges -->
 {% if site.enable_publication_badges.altmetric %}
@@ -195,7 +195,7 @@
     crossorigin="anonymous"
   ></script>
   {% unless page.pseudocode %}
-    <script src="{{ '/assets/js/mathjax-setup.js' | relative_url | bust_file_cache }}"></script>
+  <script src="https://pzxyxz.github.io/assets/js/mathajx-setup.js"></script>
     <script
       defer
       src="{{ site.third_party_libraries.polyfill.url.js }}"
@@ -216,7 +216,7 @@
   <!-- Analytics -->
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
-  <script defer src="{{ '/assets/js/google-analytics-setup.js' | relative_url | bust_file_cache }}"></script>
+  <script src="https://pzxyxz.github.io/assets/js/google-analytics.js"></script>
 {% endif %}
 
 {% if site.enable_cronitor_analytics %}
@@ -239,7 +239,7 @@
 
 {% if site.enable_progressbar %}
   <!-- Scrolling Progress Bar -->
-  <script defer src="{{ '/assets/js/progress-bar.js' | relative_url | bust_file_cache }}" type="text/javascript"></script>
+   <script src="https://pzxyxz.github.io/assets/js/progress-bar.js"></script>
 {% endif %}
 
 {% if page.images %}
@@ -306,9 +306,9 @@
   <!-- Search -->
   <script type="module" src="{{ '/assets/js/search/ninja-keys.min.js' | relative_url | bust_file_cache }}"></script>
   <ninja-keys hideBreadcrumbs noAutoLoadMdIcons placeholder="Type to start searching"></ninja-keys>
-  <script src="{{ '/assets/js/search-setup.js' | relative_url | bust_file_cache }}"></script>
-  <script src="{{ '/assets/js/search-data.js' | relative_url }}"></script>
-  <script src="{{ '/assets/js/shortcut-key.js' | relative_url | bust_file_cache }}"></script>
+  <script src="https://pzxyxz.github.io/assets/js/search-setup.js"></script>
+  <script src="https://pzxyxz.github.io/assets/js/search-data.js"></script>
+  <script src="https://pzxyxz.github.io/assets/js/shortcut-key.js"></script>
 {% endif %}
 
 {% if site.newsletter.enabled %}
